--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,10 @@
     tools:context=".HomeView">
 
   <RelativeLayout
+      android:id="@+id/relativeLayout"
       android:layout_width="290dp"
       android:layout_height="192dp"
-      android:layout_marginBottom="555dp"
+      android:layout_marginBottom="455dp"
       android:background="@drawable/border"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +24,7 @@
   <ScrollView
       android:layout_width="290dp"
       android:layout_height="250dp"
-      android:layout_marginBottom="455dp"
+      android:layout_marginBottom="350dp"
       android:background="@drawable/border"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +40,7 @@
       android:id="@+id/title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="100dp"
+      android:layout_marginTop="45dp"
       android:text="Recently Viewed Cards"
       android:textSize="24dp"
       app:layout_constraintEnd_toEndOf="parent"
@@ -47,14 +48,14 @@
       app:layout_constraintTop_toTopOf="parent" />
 
   <RelativeLayout
+      android:id="@+id/relativeLayout2"
       android:layout_width="290dp"
       android:layout_height="192dp"
-      android:layout_marginBottom="160dp"
+      android:layout_marginBottom="140dp"
       android:background="@drawable/border"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent" >
-  </RelativeLayout>
+      app:layout_constraintStart_toStartOf="parent" />
 
   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline"
@@ -74,7 +75,7 @@
       android:id="@+id/cardsCollected"
       android:layout_width="125dp"
       android:layout_height="75dp"
-      android:layout_marginBottom="260dp"
+      android:layout_marginBottom="240dp"
       android:background="@drawable/border"
       android:text="\n   Cards Collected \n #"
       android:textSize="15dp"
@@ -87,7 +88,7 @@
       android:id="@+id/collectionValue"
       android:layout_width="125dp"
       android:layout_height="75dp"
-      android:layout_marginBottom="260dp"
+      android:layout_marginBottom="240dp"
       android:background="@drawable/border"
       android:text="\n   Collection Value \n $"
       android:textSize="15dp"
@@ -100,13 +101,30 @@
       android:id="@+id/randomCard"
       android:layout_width="250dp"
       android:layout_height="75dp"
-      android:layout_marginBottom="172dp"
+      android:layout_marginBottom="150dp"
       android:backgroundTint="@color/bled"
       android:text="Random Card"
       android:textSize="16dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.509"
+      app:layout_constraintHorizontal_bias="0.50"
       app:layout_constraintStart_toStartOf="parent" />
+
+  <com.google.android.material.bottomnavigation.BottomNavigationView
+      android:id="@+id/bottomNavigationView"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="20dp"
+      android:layout_marginEnd="20dp"
+      android:elevation="2dp"
+      android:background="@drawable/bottom_background"
+      app:itemIconSize="30dp"
+      app:itemIconTint="@drawable/item_selector"
+      app:itemRippleColor="@android:color/transparent"
+      app:labelVisibilityMode="labeled"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:menu="@menu/bottom_menu"/>
 
   </androidx.constraintlayout.widget.ConstraintLayout>
