--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -12,11 +12,11 @@
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bottom_background"
+        android:background="@color/white"
         android:elevation="2dp"
         app:itemIconSize="30dp"
-        app:itemIconTint="@drawable/item_selector"
         app:itemRippleColor="@android:color/transparent"
+        app:itemTextColor="@color/black"
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
