--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -12,10 +12,9 @@
         android:id="@+id/searchBar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginEnd="4dp"
         android:background="@color/white"
-        app:layout_constraintEnd_toStartOf="@+id/searchType"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.75"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -26,27 +25,37 @@
         android:id="@+id/searchRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="4dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchBar" />
+        app:layout_constraintTop_toBottomOf="@+id/searchType" />
 
     <Spinner
         android:id="@+id/searchType"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
         android:background="@color/bled"
         android:backgroundTintMode="add"
         android:colorForeground="@color/white"
         android:entries="@array/searchDropdown"
         android:padding="2dp"
-        app:layout_constraintBottom_toBottomOf="@+id/searchBar"
+        app:layout_constraintEnd_toStartOf="@+id/sortType"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchBar" />
+
+    <Spinner
+        android:id="@+id/sortType"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:background="@color/bled"
+        android:backgroundTintMode="add"
+        android:colorForeground="@color/white"
+        android:entries="@array/searchDropdown"
+        android:padding="2dp"
+        app:layout_constraintBottom_toBottomOf="@+id/searchType"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/searchBar"
-        app:layout_constraintTop_toTopOf="@+id/searchBar" />
+        app:layout_constraintStart_toEndOf="@+id/searchType"
+        app:layout_constraintTop_toBottomOf="@+id/searchBar" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
