--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,20 +21,15 @@
 
   </RelativeLayout>
 
-  <ScrollView
+  <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/collectionRecyclerView"
       android:layout_width="290dp"
       android:layout_height="250dp"
       android:layout_marginBottom="350dp"
       android:background="@drawable/border"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" />
-  </ScrollView>
+      app:layout_constraintStart_toStartOf="parent" />
 
   <TextView
       android:id="@+id/title"
