--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,9 +12,9 @@
       android:id="@+id/relativeLayout"
       android:layout_width="290dp"
       android:layout_height="192dp"
-      android:layout_marginBottom="455dp"
+      android:layout_marginBottom="100dp"
       android:background="@drawable/border"
-      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintBottom_toBottomOf="@+id/collectionRecyclerView"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent">
 
@@ -25,9 +24,9 @@
       android:id="@+id/collectionRecyclerView"
       android:layout_width="290dp"
       android:layout_height="250dp"
-      android:layout_marginBottom="350dp"
+      android:layout_marginBottom="35dp"
       android:background="@drawable/border"
-      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent" />
 
@@ -35,12 +34,12 @@
       android:id="@+id/title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="45dp"
+      android:layout_marginTop="10dp"
       android:text="Recently Viewed Cards"
       android:textSize="24dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+      app:layout_constraintTop_toTopOf="@+id/relativeLayout" />
 
   <RelativeLayout
       android:id="@+id/relativeLayout2"
@@ -67,12 +66,11 @@
       app:layout_constraintGuide_percent="0.15" />
 
   <TextView
-      android:id="@+id/cardsCollected"
+      android:id="@+id/totalCardsCollected"
       android:layout_width="125dp"
-      android:layout_height="75dp"
+      android:layout_height="65dp"
       android:layout_marginBottom="240dp"
       android:background="@drawable/border"
-      android:text="\n   Cards Collected \n #"
       android:textSize="15dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
@@ -80,12 +78,11 @@
       app:layout_constraintStart_toStartOf="parent" />
 
   <TextView
-      android:id="@+id/collectionValue"
+      android:id="@+id/totalCardsLoaded"
       android:layout_width="125dp"
-      android:layout_height="75dp"
+      android:layout_height="65dp"
       android:layout_marginBottom="240dp"
       android:background="@drawable/border"
-      android:text="\n   Collection Value \n $"
       android:textSize="15dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
@@ -121,4 +118,18 @@
       app:layout_constraintStart_toStartOf="parent"
       app:menu="@menu/bottom_menu" />
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+  <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline3"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      app:layout_constraintGuide_begin="85dp" />
+
+  <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline4"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      app:layout_constraintGuide_begin="381dp" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
